<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Water&amp;Power Outage</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_update">Update</string>
    <string name="cut_details">Details</string>
	<string name="operator_title">Plant Name:</string>
	<string name="start_end_date_title">Start-End Date:</string>
	<string name="location_title">Affected Areas:</string>
	<string name="reason_title">Reason:</string>
	<string name="image_content_desc">Outage</string>
	<string name="cuts_range_header">LISTING</string>
    <string name="cuts_range">Listing cuts</string>
    <string name="cuts_range_sum">Choose to see only latest or also previously loaded cuts.</string>
	<string name="cuts_refresh_header">REFRESH</string>
    <string name="cuts_refresh_freq">Outage refresh frequency</string>
    <string name="cuts_refresh_freq_sum">Click to change the outage refresh frequency.</string>
    <string name="cuts_order_header">ORDER</string>
    <string name="cuts_order_criteria_option">Outage order criteria</string>
    <string name="cuts_order_criteria_option_sum">Choose the order criteria for the outages listed.</string>
    <string name="cuts_order_option">Outage listing order</string>
    <string name="cuts_order_option_sum">Choose the listing order for the outages.</string>
    <string name="cuts_search_str">Search Keywords</string>
    <string name="cuts_search_str_sum">Type in the keywords to be searched in the outages (using Turkish characters, separated by commas).</string>
    <string name="cuts_lang_header">LANGUAGE</string>
    <string name="cuts_lang">Application language</string>
    <string name="cuts_lang_sum">Select language.</string>
    <string name="water_label">Water</string>
    <string name="electricity_label">Electricity</string>
    <string name="share">Share</string>
    <string name="choose_app_to_share_msg">Choose an application for sharing:</string>
    <string name="no_share_apps_err_msg">No application suitable for sharing is found!</string>
    <string name="water_cut_label">Water Outage</string>
    <string name="electricity_cut_label">Electricity Outage</string>
    <string name="for_more_cuts_label">For more:</string>
    <string name="cuts_ticker">New Outage Notification</string>
	<string name="cuts_notify_text">There are new breakdown-outage notifications.</string>
	<string name="cuts_notify_header">New %1$s Outage:</string>
	<string name="cuts_app_rate_sum">Rate %1$s Application</string>
	<string name="cuts_app_rate">If you enjoy using %1$s, please take a moment to rate/review the app. Thank you for your support!</string>
	<string name="cuts_app_rate_btn">Rate</string>
	<string name="cuts_app_remind_btn">Remind me later</string>
	<string name="cuts_app_already_btn">Already have</string>
	<string name="no_cuts_text">Loading progress continues or there are no new cuts to be listed.</string>
</resources>