<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

   	<item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          yourapp:showAsAction="ifRoom|collapseActionView"
          yourapp:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/menu_update"
          android:title="@string/menu_update"
          android:icon="@drawable/ic_action_refresh"
          yourapp:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_menu_preferences"
     	  yourapp:showAsAction="ifRoom|withText"/>

</menu>